force-app/src/objects/cpm__Setup_Record__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>cpm__Apex_Base_Class__c</fullName>
        <description>The name of the Base class of the package.</description>
        <label>Apex Base Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Apex_Installation_Class__c</fullName>
        <description>Handler Apex class implementing the interface ISetupBase</description>
        <label>Apex Installation Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Color_Number__c</fullName>
        <label>Color Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value indicating if the Extension is active or not.</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Package the default one.</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Namespace__c</fullName>
        <description>The namespace of the extension package. Heavily used to dynamically construct the package&apos;s classes.</description>
        <label>Namespace</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Pretty_Name__c</fullName>
        <description>The public name of the Extension Package.</description>
        <label>Pretty Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Setup Record</label>
</CustomObject>